Bug 328630 - Crash when trying to Crop an image containing Shape Layer
Summary: Crash when trying to Crop an image containing Shape Layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-10 14:30 UTC by Dmitry Kazakov
Modified: 2013-12-12 12:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2013-12-10 14:30:55 UTC
1) Open an image attached to bug 328537.
2) Select something with Crop Tool
3) Move the rect to the topleft (almost outside of the image)
4) Press Apply -> Crash


Thread 8 (Thread 0x7f6a50e2c700 (LWP 29803)):
[KCrash Handler]
#6  KoPathShape::outline (this=<optimized out>) at /home/devel/kde-src/calligra/libs/flake/KoPathShape.cpp:457
#7  0x00007f6a6bc38cc5 in KoPathShape::size (this=<optimized out>) at /home/devel/kde-src/calligra/libs/flake/KoPathShape.cpp:554
#8  0x00007f6a6bc549f6 in KoShape::position (this=0x6a41120) at /home/devel/kde-src/calligra/libs/flake/KoShape.cpp:780
#9  0x00007f6a6bc5b9ea in KoShape::setPosition (this=0x6a41120, newPosition=...) at /home/devel/kde-src/calligra/libs/flake/KoShape.cpp:347
#10 0x00007f6a6bceff46 in KoShapeMoveCommand::redo (this=0x9540ef0) at /home/devel/kde-src/calligra/libs/flake/commands/KoShapeMoveCommand.cpp:55
#11 0x00007f6a6a905d52 in KUndo2QStack::push (this=0xa779c20, cmd=0x9540ef0) at /home/devel/kde-src/calligra/libs/kundo2/kundo2stack.cpp:570
#12 0x00007f6a6e4c305f in KisProcessingCommand::redo (this=0xa778dc0) at /home/devel/kde-src/calligra/krita/image/commands_new/kis_processing_command.cpp:35
#13 0x00007f6a6e5572d7 in KisStrokeStrategyUndoCommandBased::doStrokeCallback (this=0x2528070, data=<optimized out>) at /home/devel/kde-src/calligra/krita/image/kis_stroke_strategy_undo_command_based.cpp:96
#14 0x00007f6a6e41e4d1 in KisUpdateJobItem::run (this=0x28ed2f0) at /home/devel/kde-build/calligra/krita/image/../../../../kde-src/calligra/krita/image/kis_update_job_item.h:61
#15 0x00007f6a67b5ce15 in QThreadPoolThread::run (this=0x9f2e260) at concurrent/qthreadpool.cpp:106
#16 0x00007f6a67b68025 in QThreadPrivate::start (arg=0x9f2e260) at thread/qthread_unix.cpp:331
#17 0x00007f6a678d7f05 in start_thread () from /lib64/libpthread.so.0
#18 0x00007f6a66c4a53d in clone () from /lib64/libc.so.6
Comment 1 Dmitry Kazakov 2013-12-12 12:11:10 UTC
Git commit 2e9e34ae6d78f1c3c916c60e4e5d0e5482e14883 by Dmitry Kazakov.
Committed on 12/12/2013 at 12:10.
Pushed by dkazakov into branch 'master'.

Fix crash when cropping a Shape Layer

M  +1    -3    krita/image/commands_new/kis_node_move_command2.cpp
M  +1    -1    krita/image/commands_new/kis_node_move_command2.h
M  +1    -1    krita/image/processing/kis_crop_processing_visitor.cpp
M  +1    -1    krita/image/processing/kis_transform_processing_visitor.cpp
M  +1    -2    krita/plugins/tools/defaulttools/kis_tool_move.cc
M  +3    -6    krita/plugins/tools/defaulttools/strokes/move_stroke_strategy.cpp
M  +1    -3    krita/plugins/tools/defaulttools/strokes/move_stroke_strategy.h
M  +1    -1    krita/plugins/tools/defaulttools/tests/move_stroke_test.cpp
M  +4    -11   krita/ui/flake/kis_shape_layer.cc

http://commits.kde.org/calligra/2e9e34ae6d78f1c3c916c60e4e5d0e5482e14883
Comment 2 Dmitry Kazakov 2013-12-12 12:11:58 UTC
Git commit 526cebe2df213fb061fce205c7e4ccde28804108 by Dmitry Kazakov.
Committed on 12/12/2013 at 12:10.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix crash when cropping a Shape Layer

M  +1    -3    krita/image/commands_new/kis_node_move_command2.cpp
M  +1    -1    krita/image/commands_new/kis_node_move_command2.h
M  +1    -1    krita/image/processing/kis_crop_processing_visitor.cpp
M  +1    -1    krita/image/processing/kis_transform_processing_visitor.cpp
M  +1    -2    krita/plugins/tools/defaulttools/kis_tool_move.cc
M  +3    -6    krita/plugins/tools/defaulttools/strokes/move_stroke_strategy.cpp
M  +1    -3    krita/plugins/tools/defaulttools/strokes/move_stroke_strategy.h
M  +1    -1    krita/plugins/tools/defaulttools/tests/move_stroke_test.cpp
M  +4    -11   krita/ui/flake/kis_shape_layer.cc

http://commits.kde.org/calligra/526cebe2df213fb061fce205c7e4ccde28804108