Fix crash when cropping a Shape Layer

BUG:328630