krita/image/commands_new/kis_node_move_command2.cpp
@@ -28,13 +28,11 @@
 KisNodeMoveCommand2::KisNodeMoveCommand2(KisNodeSP node,
                                          const QPoint& oldPos,
                                          const QPoint& newPos,
-                                         KisUndoAdapter *undoAdapter,
                                          KUndo2Command *parent)
     : KUndo2Command(i18nc("(qtundo-format)", "Move"), parent),
       m_oldPos(oldPos),
       m_newPos(newPos),
-      m_node(node),
-      m_undoAdapter(undoAdapter)
+      m_node(node)
 {
 }
 
