krita/image/processing/kis_crop_processing_visitor.cpp
@@ -59,7 +59,7 @@ void KisCropProcessingVisitor::visitNodeWithPaintDevice(KisNode *node, KisUndoAd
     if (m_moveLayers) {
         QPoint oldPos(node->x(), node->y());
         QPoint newPos(node->x() - m_rect.x(), node->y() - m_rect.y());
-        KUndo2Command *command = new KisNodeMoveCommand2(node, oldPos, newPos, undoAdapter);
+        KUndo2Command *command = new KisNodeMoveCommand2(node, oldPos, newPos);
         undoAdapter->addCommand(command);
     }
 }
